deleted .streamlit file. Created .streamlit fodler and added config.toml to remove toolbar options at top of page

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-base="dark"  # You can set this to "light" or "dark" depending on your preference.
+base="dark"
 
 [server]
 enableXsrfProtection=false
